@@ -1,4 +1,4 @@
-/* $OpenBSD: auth1.c,v 1.66 2006/03/25 13:17:01 djm Exp $ */
+/* $OpenBSD: auth1.c,v 1.67 2006/07/20 15:26:14 stevesk Exp $ */
 /*
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
  *                    All rights reserved
@@ -11,6 +11,10 @@
  */
 
 #include "includes.h"
+
+#include <sys/types.h>
+
+#include <unistd.h>
 
 #include "xmalloc.h"
 #include "rsa.h"
