@@ -1,4 +1,4 @@
-/* $OpenBSD: session.c,v 1.210 2006/07/19 13:07:10 dtucker Exp $ */
+/* $OpenBSD: session.c,v 1.211 2006/07/20 15:26:15 stevesk Exp $ */
 /*
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
  *                    All rights reserved
@@ -43,6 +43,8 @@
 #include <sys/wait.h>
 #include <sys/un.h>
 
+#include <arpa/inet.h>
+
 #include <errno.h>
 #include <grp.h>
 #ifdef HAVE_PATHS_H
@@ -50,7 +52,7 @@
 #endif
 #include <pwd.h>
 #include <signal.h>
-#include <arpa/inet.h>
+#include <unistd.h>
 
 #include "ssh.h"
 #include "ssh1.h"
