@@ -61,6 +61,10 @@
      Add ForceCommand keyword to sshd_config, equivalent to the "command="
      key option, man page entry and example in sshd_config.
      Feedback & ok djm@, man page corrections & ok jmc@
+   - stevesk@cvs.openbsd.org 2006/07/20 15:26:15
+     [auth1.c serverloop.c session.c sshconnect2.c]
+     missed some needed #include <unistd.h> when KERBEROS5=no; issue from
+     massimo@cedoc.mo.it
 
 20060713
  - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h
@@ -4979,4 +4983,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4422 2006/07/24 04:06:47 djm Exp $
+$Id: ChangeLog,v 1.4423 2006/07/24 04:07:35 djm Exp $
